src/test/deca/syntax/invalid/improvided/assign_invalid.deca
// Description: 
// 	left value non valide
// Resultats :
// 	Ligne 6 : Left value invalid 
{
	int s  = 3;
	-s = 3;
}	
